Cleanup `jpro-mdfx` example app gradle build file